--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.7.2
-django==4.2.3
-# freeze==1.0.10
+Django==4.2.3
+django-crum==0.7.9
+django-widget-tweaks==1.4.12
 Pillow==10.0.0
 psycopg2==2.9.6
 pytz==2023.3
 six==1.16.0
 sqlparse==0.4.4
+typing_extensions==4.7.1
+tzdata==2023.3
