--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,11 +1,31 @@
+arabic-reshaper==3.0.0
 asgiref==3.7.2
+asn1crypto==1.5.1
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+click==8.1.7
+colorama==0.4.6
+cryptography==41.0.3
+cssselect2==0.7.0
 Django==4.2.3
 django-crum==0.7.9
 django-widget-tweaks==1.4.12
+html5lib==1.1
+idna==3.4
+lxml==4.9.3
+oscrypto==1.3.0
 Pillow==10.0.0
 psycopg2==2.9.6
-pytz==2023.3
-six==1.16.0
+pycparser==2.21
+pyHanko==0.20.0
 sqlparse==0.4.4
+svglib==1.5.1
+tinycss2==1.2.1
 typing_extensions==4.7.1
 tzdata==2023.3
+tzlocal==5.0.1
+uritools==4.0.2
+urllib3==2.0.4
+webencodings==0.5.1
+xhtml2pdf==0.2.11
